# AI-Workstation

./: .aider.conf.yml  .aider.model.settings.yml  .clinerules  .gitattributes  .gitignore  .sops.yaml  .webui_secret_key  AI-Workstation.md  Architecture.md  CHANGELOG.md  DisasterRecovery.md  FinalRemediationPlan.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  RemediationPlan.md  Requirements.md  Roadmap.md  SystemReport.md  TechnologyDecisionRecord.md  Troubleshooting.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
config/litellm/: config.yaml
config/qdrant/: qdrant.yaml
docs/: ai-models.md  architecture.md  index.md  requirements.md  roadmap.md  runbook.md  security.md  tdr.md
scripts/: setup_helper.py
scripts/ai/: router_proxy.py
scripts/maintenance/: cleanup-models.ps1  update-models.ps1
scripts/monitoring/: health-check.ps1  vram-check.ps1
scripts/obsidian/: create_vault.py
scripts/rag/: agent_workflow.py  rag_pipeline.py
scripts/setup/: aider.bat  start-all.ps1  start-ghidra-mcp.bat  start-litellm.bat  start-qdrant.bat  start-router.bat  start-webui.bat  start-webui.ps1  stop-all.ps1
tests/: test-inference.ps1  test-security.ps1
