[project]
name = "ai-workstation"
version = "0.1.0"
description = "Local AI Workstation for software development"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy]>=1.92.0",
    "mkdocs-material>=9.7.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.2.0",
    "qdrant-client>=1.18.0",
]

[dependency-groups]
dev = []